--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dr. Poonam Panicker</title>
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
+    }
+
+    body {
+      height: 100vh;
+      background: #1e1e1e;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .card {
+      width: 320px;
+      height: 560px;
+      background: linear-gradient(135deg, #242424 0%, #1b1b1b 100%);
+      border: 1px solid #2f2f2f;
+      position: relative;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .top-bar,
+    .bottom-bar {
+      width: 120px;
+      height: 10px;
+      background: #ff8c2b;
+      margin: 0 auto;
+    }
+
+    .top-bar {
+      position: absolute;
+      top: 15px;
+      left: 0;
+      right: 0;
+    }
+
+    .bottom-bar {
+      position: absolute;
+      bottom: 15px;
+      left: 0;
+      right: 0;
+    }
+
+    .avatar {
+      width: 130px;
+      height: 130px;
+      border-radius: 50%;
+      border: 6px solid #ff8c2b;
+      overflow: hidden;
+      margin: 50px auto 25px;
+      background: #ccc;
+    }
+
+    .avatar img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    h1 {
+      color: #ffffff;
+      font-size: 22px;
+      margin-bottom: 10px;
+    }
+
+    .designation {
+      color: #ff8c2b;
+      font-size: 12px;
+      letter-spacing: 2px;
+      margin-bottom: 20px;
+    }
+
+    .divider {
+      width: 120px;
+      height: 2px;
+      background: #ff8c2b;
+      margin: 0 auto 30px;
+    }
+
+    .socials {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .socials a {
+      font-size: 28px;
+      text-decoration: none;
+    }
+
+    .socials .whatsapp {
+      color: #25d366;
+    }
+
+    .socials .linkedin {
+      color: #0a66c2;
+    }
+
+    .socials a:hover {
+      transform: scale(1.1);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="card">
+    <div class="top-bar"></div>
+
+    <div class="avatar">
+      <!-- Replace with real photo if needed -->
+      <img src="https://via.placeholder.com/200" alt="Profile"/>
+    </div>
+
+    <h1>Dr. Poonam Panicker</h1>
+    <div class="designation">QUALITY MANAGER – MEDICLINIC</div>
+
+    <div class="divider"></div>
+
+    <div class="socials">
+      <a class="whatsapp" href="https://wa.me/971525149268" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+      <a class="linkedin" href="https://linkedin.com/in/revmac22" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
+    </div>
+
+    <div class="bottom-bar"></div>
+  </div>
+</body>
+</html>
 
