--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
 
     <h1>Dr. Poonam Panicker</h1>
-    <div class="designation">Sr. Corporate Quality & Patient Safety Manager at Mediclinic Middle East</div>
+    <div class="designation">Sr. Corporate Quality & Patient Safety Manager - Mediclinic</div>
 
     <div class="divider"></div>
 
