--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <div class="avatar">
       <!-- Replace with real photo if needed -->
-      <img src="https://via.placeholder.com/200" alt="Profile"/>
+      <img src="profile.png" alt="Profile"/>
     </div>
 
     <h1>Dr. Poonam Panicker</h1>
